--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="search_hint">Search locations</string>
     <string name="search_title">Find destination</string>
     <string name="search_result">result</string>
+    <string name="autocomplete_hint">Enter where you want to go</string>
 </resources>
